--- a/main.html
+++ b/main.html
@@ -10,7 +10,11 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	  <label for = "name">Name:</label>
+
+	<form>
+
+
+		<label for = "name">Name:</label>
 	  <input type="text" id = "name" required>
 	  <label for = "email">Email:</label>
 	  <input type="email" id = "email" required>
@@ -37,6 +41,10 @@
 	<input type="url" id = "portfolio">
 	<button type="submit">submit</button>
 	
+
+		
+	</form>
+	  
 	
 
 	
